syntax = "proto3";

option go_package = "./pkg/proto";

service EmailGrpcService {
    rpc GetPrivateEmail(GetPrivateEmailRequestDto) returns (GetPrivateEmailResponseDto);
    rpc GetPublicEmail(GetPublicEmailRequestDto) returns (GetPublicEmailResponseDto);
}

message GetPrivateEmailRequestDto {
  }

message GetPrivateEmailResponseDto {
    string privateEmail = 1;
  }

message GetPublicEmailRequestDto {
  }

message GetPublicEmailResponseDto {
    string publicEmail = 1;
  }
